--- a/index.html
+++ b/index.html
@@ -4,22 +4,16 @@
         <title>Scroll menu</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@100;200;300;400;600&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header id="home">
+        <header>
+            <a href="#home" class="logo"><span>Gajar Soft</span></a>            
+            <i class="fa-solid fa-bars" id="ham"></i>
             <nav id="nav">
-                <div class="nav-center">
-                    <div class="nav-header">
-                        <img src="assets/gs.jpeg" alt="Logo" class="logo">
-                        <button class="hamburger">
-                            <i class="fas fa-bars"></i>
-                        </button>
-                    </div>
-                    <div class="links-container">
                         <ul class="links">
                             <li>
-                                <a href="#home" class="scroll-link">Home</a>
+                                <a href="#home" class="scroll-link active">Home</a>
                             </li>
                             <li>
                                 <a href="#about" class="scroll-link">About</a>
@@ -31,21 +25,63 @@
                                 <a href="#contact" class="scroll-link">Contact</a>
                             </li>
                         </ul>
-                    </div>
-                </div>
+                
             </nav>
-            <div class="banner">
-                <div class="container">
-                    <h1>Scroll Nav Project</h1>
-                    <p>In this project, we create a navigation bar that shows when the user scrolls. This is done using HTML, CSS, and JavaScript.</p>
-                    <a href="#about" class="scroll-link btn btn-white">Explore products</a>
-                </div>
-            </div>
         </header>
-
+        <section id="home">
+        <div class="home-content">
+                <h1>Scroll Nav Project</h1>
+                <p>In this project, we create a navigation bar that shows when the user scrolls. This is done using HTML, CSS, and JavaScript.</p>
+                <a href="#about" class="scroll-link btn btn-white">Explore products</a>
+        </div>
+    </section>
         <section id="about" class="section">
             <div class="title">
                 <h2>About <span>us</span></h2>
+            </div>
+        </section>
+
+        <section id="products" class="section">
+            <h2>Our <span>products</span></h2>
+            <div class="products-container">
+                <div class="product-box">
+                    <img src="assets/p1.jpeg" alt="">
+                    <div class="product-layer">
+                        <h4>Embedded Systems</h4>
+                        <p>We develop systems that automate your systems</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+
+                <div class="product-box">
+                    <img src="assets/p2.jpeg" alt="">
+                    <div class="product-layer">
+                        <h4>Mobile Application Development</h4>
+                        <p>We develop mobile applications to solve your business problems</p>
+                    </div>
+                </div>
+
+                <div class="product-box">
+                    <img src="assets/p3.jpeg" alt="">
+                    <div class="product-layer">
+                        <h4>Desktop Applications</h4>
+                        <p>We develop desktop based applications to have your crew working at full speed</p>
+                    </div>
+                </div>
+
+                <div class="product-box">
+                    <img src="assets/p4.jpeg" alt="">
+                    <div class="product-layer">
+                        <h4>CRM Applications</h4>
+                        <p>We develop customized Customer Relationship Management systems that help keep customers satisfied</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="section">
+            <div class="title">
+                <h2>Conctact <span>us</span></h2>
             </div>
         </section>
         <script src="app.js"></script>
