--- a/index.html
+++ b/index.html
@@ -83,7 +83,28 @@
             <div class="title">
                 <h2>Conctact <span>us</span></h2>
             </div>
+            <form action="#">
+                <div class="input-box">
+                    <input type="text" placeholder="Your full name">
+                    <input type="email" placeholder="Your email address">
+                </div>
+                <div class="input-box">
+                    <input type="number" placeholder="Your phone number">
+                    <input type="text" placeholder="Message subject">
+                </div>
+                <textarea cols="30" rows="10" placeholder="Your message text"></textarea>
+                <input type="submit" value="Send message" class="btn">
+            </form>
         </section>
+
+        <footer class="footer">
+            <div class="footer-notice">
+                <p>&copy; 2023 All rights reserved.</p>
+            </div>
+            <div class="footer-icon">
+                <a href="#home"><i class="fa-solid fa-arrow-up"></i></a>
+            </div>
+        </footer>
         <script src="app.js"></script>
     </body>
 </html>
