--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
         <section id="about" class="section">
             <div class="title">
                 <h2>About <span>us</span></h2>
+                <div class="content">
+                    <div class="aboutus">
+                        <h4>We are <span id="pros"></span></h4>
+                        <p>We are a one-stop shop for all of your IT needs. Trust us to deliver efficient solutions to your business problems. Whether you need a website, a customer relation management solution, an embedded system to control your cyber-physical systems, or a custom mobile of desktop application, we have got your six.</p>
+                    </div>
+                    <div class="image">
+                        <img src="assets/aboutus.jpeg" alt="">
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -105,6 +114,7 @@
                 <a href="#home"><i class="fa-solid fa-arrow-up"></i></a>
             </div>
         </footer>
+        <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
