--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         </section>
 
         <section id="contact" class="section">
-            <div class="title">
-                <h2>Conctact <span>us</span></h2>
-            </div>
+            
+            <h2>Conctact <span>us</span></h2>
+            
             <form action="#">
                 <div class="input-box">
                     <input type="text" placeholder="Your full name">
@@ -114,6 +114,7 @@
                 <a href="#home"><i class="fa-solid fa-arrow-up"></i></a>
             </div>
         </footer>
+        <script src="https://unpkg.com/scrollreveal"></script>
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
         <script src="app.js"></script>
     </body>
